[package]
name = "game"
version = "0.1.0"
authors = ["Lisa Schuh <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vulkan = ["gfx-backend-vulkan"]

[dependencies]
image = "0.21"
log = "0.4"

[target.'cfg(debug_assertions)'.dependencies]
env_logger = "0.6"

winit = "0.19"
glsl-to-spirv = "0.1.4"

gfx-hal = "0.3"
gfx-backend-empty = "0.3"

[dependencies.gfx-backend-vulkan]
version = "0.3"
features = ["winit", "x11"]
optional = true

[build-dependencies]
glsl-to-spirv = "=0.1.4"
